packages/varlock-website/src/styles/global.css
/* ... */
/* asides (ex :::[tip]) */
.starlight-aside {
  border: 1px dotted var(--aside-color-1);
  position: relative;
  box-shadow: 5px 5px 0px var(--aside-color-shadow);
  background: rgba(255, 255, 255, .07);
}

html[data-theme='light'] .starlight-aside {
  background: white;
  --aside-bg-opacity: .35;
}

.starlight-aside .starlight-aside__title {
  color: var(--aside-color-1);
  position: relative;
  z-index: 2;
}

html[data-theme='light'] .starlight-aside .starlight-aside__title {
  color: currentColor;
}

.starlight-aside .starlight-aside__content {
  position: relative;
  z-index: 2;
}

.starlight-aside .starlight-aside__content a {
  color: var(--sl-color-text-accent);
}

.starlight-aside .starlight-aside__content a:hover {
  color: var(--color-text-full-shade);
}

/* Add dotted corner decorations */
.starlight-aside::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 10px;
  height: 10px;
  border-top: 2px dotted var(--aside-color-1);
  border-left: 2px dotted var(--aside-color-1);
}

.starlight-aside::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  width: 10px;
  height: 10px;
  border-bottom: 2px dotted var(--aside-color-1);
  border-right: 2px dotted var(--aside-color-1);
}

/* TODO update these colors to match the new palette */
.starlight-aside.starlight-aside--note {
  --aside-color-1: var(--brand-pink);
  --aside-color-shadow: var(--brand-pink--t2);
  /* --aside-color-2: var(--brand-red); */
}

.starlight-aside.starlight-aside--tip {
  --aside-color-1: var(--brand-cyan);
  --aside-color-shadow: var(--brand-cyan--t2);
  /* --aside-color-2: var(--brand-red); */
}

.starlight-aside.starlight-aside--caution {
  --aside-color-1: var(--brand-orange);
  --aside-color-shadow: var(--brand-orange--t2);
  /* --aside-color-2: var(--brand-red); */
}

.starlight-aside.starlight-aside--danger {
  --aside-color-1: var(--brand-orange);
  --aside-color-shadow: var(--brand-orange--t2);
  /* --aside-color-2: var(--brand-red); */
}

/* starlight steps component */
.sl-steps {
  --sl-color-hairline-light: var(--brand-orange--t2);
}

.sl-steps>li:before {
  background-color: var(--brand-red) !important;
  color: white !important;
  font-family: 'Days One', sans-serif;
  box-shadow: none !important;
}

/* customize markdown tables */
.sl-markdown-content table:not(:where(.not-content *)) {
  display: table;
  min-width: 100%;
  border: 1px solid var(--brand-red--t1);
}

.sl-markdown-content table {
  --sl-color-hairline-light: var(--brand-red--t1);
  border: 1px dotted var(--brand-red--t1);
  position: relative;
}

.sl-markdown-content table thead {
  text-align: left;
  background: var(--brand-red--t2);
  color: var(--color-text-full-shade);
}

.sl-markdown-content table td,
.sl-markdown-content table th {
  padding: 8px;
}

.sl-markdown-content table :is(th:first-child, td:first-child):not(:where(.not-content *)) {
  padding-inline-start: 8px;
}

.sl-markdown-content tr:last-child td:not(:where(.not-content *)) {
  border-bottom: none;
}

.sl-markdown-content table::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 10px;
  height: 10px;
  border-top: 2px dotted var(--brand-purple--t1);
  border-left: 2px dotted var(--brand-purple--t1);
}

.sl-markdown-content table::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  width: 10px;
  height: 10px;
  border-bottom: 2px dotted var(--brand-purple--t1);
  border-right: 2px dotted var(--brand-purple--t1);
}

.sidebar-content a,
.right-sidebar a {
  transition: color .1s;
}

@media (min-width: 72rem) {
  .right-sidebar-container {
    width: var(--sl-sidebar-width);
  }
}

#starlight__mobile-toc .toggle {
  border-radius: 4px;
}

#starlight__mobile-toc .toggle:hover {
  border-color: var(--brand-pink);
}

/* mobile menu icons */
svg.close-menu {
  display: none;
}

body[data-mobile-menu-expanded] {
  svg.open-menu {
    display: none;
  }

  svg.close-menu {
    display: block;
  }
}

/* make max width 50% when only one of them is present
and right align the next button */
.pagination-links {
  display: flex;
  flex-direction: column;
  gap: .5rem;
}

@media (min-width: 50rem) {
  .pagination-links {
    flex-direction: row;
    justify-content: left;
    gap: 1rem;
  }
}

.pagination-links a {
  flex: 1;
  box-shadow: none;
}

@media (min-width: 50rem) {
  .pagination-links a {
    max-width: 50%;
  }
}

.pagination-links a:hover {
  border-color: var(--color-text-full-shade);
}

@media (min-width: 50rem) {
  .pagination-links a:first-child[rel='next'] {
    margin-left: 50%;
  }
}

/* TODO add variants - make easily reusable */
.gradient-text {
  --color-one: var(--brand-orange--text);
  --color-two: var(--brand-pink--text);
  background-color: var(--color-one);
  background: linear-gradient(30deg, var(--color-one) 0%, var(--color-two) 100%);
  background-clip: text;
  color: transparent;
}

.gradient-text.--red {
  --color-one: var(--brand-red);
  --color-two: var(--brand-pink);
}

.gradient-text.--green {
  --color-one: var(--brand-green--text);
  --color-two: var(--brand-cyan--text);
}

/* similar to sl-markdown content, need something to get links looking correct
will move to component */
.richtext a {
  color: var(--sl-color-text-accent);
}

.richtext a:hover {
  color: var(--color-text-full-shade);
}

.responsive-image {
  width: 100%;
  height: auto;
}

@media (min-width: 768px) {
  .mobile-only {
    display: none;
  }
}

@media (max-width: 767px) {
  .desktop-only {
    display: none;
  }
}


/* custom cursors - hot spot at finger tip (top-left like default arrow) */
body {
  cursor: url('../assets/gauntlet_default.svg') 4 4, default;
}

*:active {
  cursor: url('../assets/gauntlet_open.svg') 4 4, pointer;
}

a,
button:hover {
  cursor: url('../assets/gauntlet_point.svg') 4 4, pointer;
}

summary {
  cursor: url('../assets/gauntlet_point.svg') 4 4, pointer;
}
/* ... */

